[package]
name = "osm_processor_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# OSM parsing
osmpbf = "0.3"

# Geospatial
geo = "0.31"
rstar = "0.12"

# Data processing
polars = { version = "0.41", features = ["lazy", "parquet", "dtype-struct"] }

# Utilities
anyhow = "1.0"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
